# pacekeeper-trading-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  requirements.txt  stock_bot.py
.github/workflows/: deploy-pacekeeper-web.yml  desktop-build.yml  release.yml
design/: Pacekeeper Design Document.html  Wallstrdev Design System.html  pacekeeper-doc.css
desktop/: launcher.py
desktop-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop-app/src/: App.tsx  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json  updater.json
desktop-app/src-tauri/src/: config.rs  license.rs  main.rs
prediction_bot/: Dockerfile  main.py
scripts/: build_desktop_macos.sh  build_desktop_windows.ps1  keygen.py
src/api/: client.py  (+1 more)
strategy_kit/: __init__.py  models.py  portfolio.py  registry.py  router.py  store.py
tests/: test_api_client.py  test_api_guardrails.py  test_dashboard_positions_live.py  test_earnings_calendar.py  test_engine_close.py  test_engine_guardrails.py  test_engine_outcomes.py  test_engine_shadows.py  test_indicators.py  test_live_designation.py  test_llm_config.py  test_market_regime.py  test_models.py  test_news_feed.py  test_prediction_markets.py  test_risk_manager.py  test_screener.py  test_settings.py  test_shadow_book.py  test_stock_strategies_router.py  test_stock_strategy_runner.py  test_strategy.py
web/: .env.local.example  Dockerfile  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml
(+144 files in other folders)
